--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -563,6 +563,10 @@ textarea {
     border: 1px solid #ccc;
 }
 
+#lang {
+    padding: 0px;
+}
+
 input[type=checkbox] {
     margin: 10px 5px 10px 0;
 }
