--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -335,6 +335,20 @@ header {
     font-size:50%;
 }
 
+.section-features  cite a:link,
+.section-features  cite a:visited {
+    text-decoration: none;
+    color: #555;
+    border-bottom: 1px solid transparent;
+}
+
+.section-features  cite a:hover,
+.section-features  cite a:active {
+    text-decoration: none;
+    color: #555;
+    border-bottom: 1px solid #cf6d17;
+}
+
 /* ---------------------------------------------- */
 /* Gallery */
 /* ---------------------------------------------- */
