--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -134,7 +134,8 @@ h1 {
     font-size: 240%;   
     word-spacing: 3px;
     margin-bottom: 20px;
-    letter-spacing: 1px;  
+    letter-spacing: 1px;
+    line-height: 135%;
 }
 
 h2 {
@@ -142,7 +143,8 @@ h2 {
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
-    letter-spacing: 1px;  
+    letter-spacing: 1px; 
+    line-height: 135%;
 }
 
 h2:after {
@@ -158,7 +160,7 @@ h2:after {
 h3 {
     font-size: 90%;
     margin-bottom: 15px;
-    
+    line-height: 135%;
 }
 
 /* ---------------------------------------------- */
