--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -443,7 +443,7 @@ header {
 .box img {
     width: 100%;
     height: auto;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .box iframe {    
@@ -459,7 +459,7 @@ header {
 .map {
     width: 100%;
     height: 470px;
-    border: 1px solid #a0a0a0;
+/*    border: 1px solid #a0a0a0;*/
 }
 
 
