--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -91,7 +91,7 @@
     
     .main-nav {
         float: left;
-        margin-top: 35px;
+        margin-top: 20px;
         margin-left: 25px;
     }
     
@@ -103,17 +103,20 @@
         font-size: 100%;
     }
     
+    .main-nav li a:active, 
+    .main-nav li a:hover {
+        color: #e67e22;      
+    }
+    
+    #lang {
+        margin: 8px 0;
+    }
+    
     .main-nav li {
     display: block;
     }
 
-    .main-nav li a:link,
-    .main-nav li a:visited {
-        display: block;
-        border: 0;
-    }
-    
-    
+        
     .sticky .main-nav {
         margin-top: 10px;
     } 
@@ -121,6 +124,11 @@
     .sticky .main-nav li a:link, 
     .sticky .main-nav li a:visited {
         padding: 10px 0;        
+    }
+    
+    .sticky .main-nav li a:active, 
+    .sticky .main-nav li a:hover {
+        color: #e67e22;      
     }
     
     .sticky .mobile-nav-icon { margin-top: 10px; }
