resolve mbile nav

--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -4,7 +4,8 @@
 @media only screen and (max-width: 1200px) {
     .hero-text-box {
         width: 100%;
-        padding: 0 2%;        
+        padding: 0 2%;  
+        top: 55%;
     }
     
     .row {
@@ -110,6 +111,7 @@
     
     #lang {
         margin: 8px 0;
+        width: 50%;
     }
     
     .main-nav li {
