--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -10,7 +10,8 @@
     
     .row {
         padding: 0 2%;
-    }   
+    }
+    
 }
 
 
@@ -110,8 +111,7 @@
     }
     
     #lang {
-        margin: 8px 0;
-        width: 50%;
+        margin: 8px 0;        
     }
     
     .main-nav li {
@@ -170,6 +170,9 @@
 
 /* Small phones from 0 to 480 px */
 @media only screen and (max-width: 480px) {
+    .main-nav {
+        margin-left: 5px;
+    }
     section { padding: 25px 0;}
     .contact-form { width: 100%; }
     .hero-text-box a:last-of-type {
@@ -179,5 +182,10 @@
     .footer-nav {
         line-height: 140%;
     }  
+    
+    .logo {
+        width: 50px;
+        height: auto;
+    }
     
 }
