--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -72,8 +72,9 @@
     body { font-size: 16px; }
     section { padding: 30px 0;}
     
-    .row,
-    .hero-text-box { padding: 0 4% ;}
+    .row  { padding: 0 4% ;}
+    
+    .hero-text-box { padding: 0 1.5% ;}
     
     .col { 
         width:100%;
