--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -709,6 +709,17 @@ js--wp-3 {
     opacity: 1;
 }  */
 
+.js--wp-1 {
+    opacity: 0;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+
+.js--wp-1.animated {
+    opacity: 1;
+}
+
 /**
  * Simple fade transition for magnific popup
  */
