reshape the header text

--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -8,6 +8,12 @@
         top: 60%;
     }
     
+
+    .header-text {
+         transform: translate(-50%,-50%);
+    }
+
+    
     .row {
         padding: 0 2%;
     }
