added animated button

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -177,7 +177,9 @@ input[type=submit] {
     text-decoration: none;
     border-radius: 200px;  
     -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;  
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
+/*    transition: background-color 0.2s, border 0.2s, color 0.2s;*/
+    transition: all 0.2s;
+    position: relative;
 }
 
 .btn-full:link, .btn-full:visited,
@@ -198,6 +200,7 @@ input[type=submit] {
      background-color: #cf6d17;   
 }
 
+
 .btn-full:active, .btn-full:hover,
  input[type=submit]:hover {
     border: 1px solid #cf6d17;    
@@ -207,6 +210,64 @@ input[type=submit] {
     border: 1px solid #cf6d17;
     color: #fff;
 }
+
+
+/*   animation  */
+.btn:hover,
+input[type=submit]:hover {
+ transform: translateY(-3px);
+ box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active,
+input[type=submit]:active {
+ transform: translateY(-1px);
+ box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);    
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-full::after {
+  background-color: #e67e22;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards;
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+
+/* ------- end ----------------  */
 
 /* ---------------------------------------------- */
 /* Header */
@@ -233,19 +294,58 @@ header {
 .header-primary {
     color: #fff;
     text-transform: uppercase;
+    
+    backface-visibility: hidden;
 }
 
 .header-primary-main {
     display: block;
     font-size: 110%;
     font-weight: 700;
+    
+    animation: moveInLeft 1s  ease-out;
 }
 
 .header-primary-sub {
      display: block;
     font-size: 70%;
     font-weight: 700;
+    
+    animation: moveInRight 1s  ease-out;
 }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
 
 .hero-text-box {
     position: absolute;
@@ -857,4 +957,31 @@ input[type=date] {
 
 
 
+/*---------  Back to Top -----------*/
+
+#back2Top {
+    width: 40px;
+    line-height: 40px;
+    overflow: hidden;
+    z-index: 999;
+    display: none;
+    cursor: pointer;
+    -moz-transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+    position: fixed;
+    bottom: 50px;
+    right: 0;
+    background-color: #DDD;
+    color: #555;
+    text-align: center;
+    font-size: 30px;
+    text-decoration: none;
+}
+#back2Top:hover {
+    background-color: #DDF;
+    color: #000;
+}
 
