aligning video content to center in photo swipe

--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -192,9 +192,11 @@
     
     .gallery-showcase li {
     width: 23%;
-
-}
-        
+    }
+    
+    .video-wrapper iframe {
+      top: 50%;     
+    }
 }
 
 
