--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -77,7 +77,7 @@
     
 }
 
-/* small phones to small tablets from 481 to 767 px*/
+/* small phones to small tablets from 501 to 767 px*/
 @media only screen and (max-width: 767px) {
     
     body { font-size: 16px; }
@@ -195,12 +195,21 @@
     }
     
     .video-wrapper iframe {
-      top: 38%;     
+      top: 35%;     
     }
 }
 
+
 /* Small phones from 0 to 480 px */
 @media only screen and (max-width: 480px) {
+    .video-wrapper iframe {
+      top: 60%;     
+    }
+}
+
+
+/* Small phones from 481 to 500 px */
+@media only screen and (max-width: 500px) {
     .main-nav {
         margin-left: 5px;
     }
