implementing the 7-1 css architecture with sass

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -295,7 +295,7 @@ input[type="submit"]:active {
 /* Header */
 /* ---------------------------------------------- */
 
-header {
+.header {
   background-image: -webkit-gradient(
       linear,
       left top,
