re allocate content based on 1-7 sass file architechture

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,14 +19,14 @@ body {
 
 .clearfix {
   zoom: 1;
-}
 
-.clearfix:after {
-  content: ".";
-  clear: both;
-  display: block;
-  height: 0;
-  visibility: hidden;
+  &:after {
+    content: ".";
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+  }
 }
 
 /* ---------------------------------------------- */
