--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,7 @@
 @import "base/animation";
 @import "base/utilities";
 
-//@import "layout/header";
-@import "layout/section";
+@import "layout/header";
 @import "layout/navigation";
 //@import "layout/gallery";
 
