--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -308,7 +308,7 @@ input[type="submit"]:active {
     url(img/mcts.jpg);
   height: 100vh;
   background-size: cover;
-  background-position: center;
+  background-position: left 60%;
   background-attachment: fixed;
 }
 
