--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -21,6 +21,18 @@
   body {
     font-size: 18px;
   }
+  .header {
+    background-image: -webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        from(rgba(0, 0, 0, 0.7)),
+        to(rgba(0, 0, 0, 0.7))
+      ),
+      url(img/mcts-1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+      url(img/mcts-1.jpg);
+  }
   section {
     padding: 60px 0;
   }
@@ -73,6 +85,7 @@
   body {
     font-size: 16px;
   }
+
   section {
     padding: 30px 0;
   }
