--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -116,6 +116,10 @@
     display: inline-block;
   }
 
+  .mobile-nav-icon i {
+    color: #555;
+  }
+
   .main-nav {
     float: left;
     margin-top: 20px;
@@ -128,6 +132,7 @@
     border: 0;
     padding: 10px 0;
     font-size: 100%;
+    color: #555;
   }
 
   .main-nav li a:active,
@@ -141,6 +146,17 @@
 
   .main-nav li {
     display: block;
+  }
+
+  nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* background-color: rgba(255, 255, 255, 0.98);
+    -webkit-box-shadow: 0 2px 2px #efefef;
+    box-shadow: 0 2px 2px #efefef; */
+    z-index: 1000;
   }
 
   .sticky .main-nav {
