--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -82,6 +82,10 @@
 
 /* small phones to small tablets from 501 to 767 px*/
 @media only screen and (max-width: 767px) {
+  .item {
+    flex-basis: 32%;
+  }
+
   body {
     font-size: 16px;
   }
@@ -239,6 +243,9 @@
 
 /* Small phones from 0 to 480 px */
 @media only screen and (max-width: 480px) {
+  .item {
+    flex-basis: 50%;
+  }
   .video-wrapper iframe {
     top: 60%;
   }
