--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -45,3 +45,16 @@
     transform: scale(1.03);
   }
 }
+
+.container {
+  display: flex;
+
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.item {
+  flex-basis: 25%;
+  padding: 5px;
+}
