--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -119,6 +119,18 @@ figcaption {
   }
 }
 
+.container {
+  display: flex;
+
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.item {
+  flex-basis: 25%;
+  padding: 5px;
+}
 /* ---------------------------------------------- */
 /* Testimonial */
 /* ---------------------------------------------- */
@@ -313,4 +325,27 @@ footer p {
   text-align: center;
   margin-top: 30px;
   word-spacing: 2px;
+}
+
+/* ---------------------------------------------- */
+/* Opinion Form */
+/* ---------------------------------------------- */
+
+.section-book {
+  background-image: linear-gradient(
+    to right bottom,
+    $color-orange-primary,
+    $color-orange-secondary
+  );
+}
+
+.book {
+  background-image: linear-gradient(105deg, transparent 50%, #fff 50%, #fff 0%),
+    url(../../resources/img/gallery-9.jpg);
+  background-size: 120%;
+  background-repeat: no-repeat;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+
+  height: 50rem;
 }
