added flex container for gallery

--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -243,9 +243,9 @@
 
 /* Small phones from 0 to 480 px */
 @media only screen and (max-width: 480px) {
-  .item {
+  /* .item {
     flex-basis: 50%;
-  }
+  } */
   .video-wrapper iframe {
     top: 60%;
   }
