--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -82,7 +82,7 @@ section {
 
 .icon-small {
   display: inline-block;
-  width: 30px;
+  /* width: 30px; */
   text-align: center;
   color: #e67e22;
   /*    color: #000;*/
@@ -1059,6 +1059,8 @@ input[type="date"] {
 
 .notice p {
   line-height: 140%;
+  display: flex;
+  align-items: baseline;
 }
 
 /*---------  Back to Top -----------*/
